fixed timeline alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1838,7 +1838,7 @@ a:hover {
 
 .timeline-badge {
   position: absolute;
-  left: -6rem;
+  left: -7.75rem;
   top: 0;
   width: 4rem;
   height: 4rem;
